# hackathon

./: Cargo.toml  NOTICE  README.md  package.json
Next.js/: server.js
src/: contract.rs  state.rs
tests/: integration.ts
