[package]
name = "secret_contract_example"
version = "0.1.0"
authors = ["SecretTemplateExample"]
edition = "2021"

[lib]
name = "contract"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]


[dependencies]

cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
schemars = { version = "0.8.11" }
serde = { version = "1.0", features = ["derive"]}
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"

cosmwasm-std = { version = "1.1.9", features = ["iterator"] }





[[bin]]
name = "schema"
required-features = ["schema"]
