[package]
name = "d-voting-app"
version = "0.1.0"
authors = ["Delali Hannah and Bright Anenorhu"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true



[dependencies]

schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = "1.0"



ecdsa = "0.16.9"
cosmwasm-crypto = "2.0.4"

cosmwasm-schema = "2.0.4"
cosmwasm-std = "2.0.4"
cosmwasm-derive = "2.0.4"
k256 = "0.13.3"
cw-storage-plus = "2.0.0"

hex-literal = "0.4.1"
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "schema"
required-features = ["schema"]




